Clean up if ini file fix for accessToken in code.js

--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -82,306 +82,101 @@ serviceAccountFile=
 
 [Cuno]
 enable=yes
-host=192.168.0.44
+host=<ip address>
 port=2323
-ignore=41EB03:EA6500
+ignore=<addresses to ignore>
 
 [switch_1]
-gpio=0
-name_de=Flutlicht QiGong Terasse
-name_en=Floodlight QiGong Platform
-name_pl=Naświetlana Platforma QiGong
+gpio=<gpio number>
+name_de=<desc german>
+name_en=<desc english>
+name_pl=<desc polish>
 
-[switch_2]
-gpio=15
-name_de=Flutlicht Strassenseite (Nord) Lu 215
-name_en=Floodlight Streetside (North) Lu 215
-name_pl=Strona ulicy Floodlight (północ) Lu 215
-
-[switch_3]
-gpio=14
-name_de=Flutlicht Garten (Süd) Lu 215
-name_en=Floodlight Garden (South) Lu 215
-name_pl=Ogród Floodlight (południe) Lu 215
-
-[switch_4]
-gpio=1
-name_de=Aussenlicht QiGong Platform
-name_en=Outside Light QiGong Platform
-name_pl=Poza Lekką Platformą QiGong
-
-[switch_5]
-gpio=3
-name_de=Aussenlicht Garage
-name_en=Outside Light Garage
-name_pl=Garaż zewnętrzny
-
-[switch_6]
-gpio=7
-name_de=Aussenbeleuchtung West Lu 215
-name_en=Outside Light West Lu 215
-name_pl=Oświetlenie Zewnętrzne Zachod Lu 215
-
-[switch_7]
-gpio=4
-name_de=Pumpe Keller
-name_en=Waterpump Basement
-name_pl=Piwnica pompowa
-
-[switch_8]
-gpio=6
-name_de=Steckdose Garage
-name_en=Power Plug Garage
-name_pl=Garaż energii elektrycznej
-
-[switch_9]
-gpio=8
-name_de=Heizung Lu 215
-name_en=Heating Lu 215
-name_pl=Ogrzewanie Lu 215
 
 [peer_1]
-name_de=Sonnenstoren
-name_en=Sunblinds
-name_pl=Markiza
-address=http://192.168.0.190:8020/pbcweb
-
-[peer_2]
-name_de=RPI 188
-name_en=RPI 188
-name_pl=RPI 188
-address=http://192.168.0.188/prcweb
-roamingAddress=http://192.168.0.188/prcapi
+name_de=
+name_en=
+name_pl=
+address=
+# optional key: specfify this when peer is PRC
+roamingAddress=https://<ip>/prcapi
 
 [fs20_1]
-name_de=Aussenlicht Eingang
-name_en=Outside Light Entrance
-name_pl=Poza Wejście światła
-address=41EB03
-
-[fs20_2]
-name_de=Aussenlicht Hintereingang
-name_en=Outside Light Rear Entrance
-name_pl=Zewnętrzne światło tylne wejście
-address=EA6500
-
-[fs20_3]
-name_de=Küche Erdgeschoss
-name_en=Kitchen Groundfloor
-name_pl=Kuchnia na parterze
-address=41EB00
-
-[fs20_4]
-name_de=Licht Terasse Süd
-name_en=Outside Light Terrace South
-name_pl=Zewnątrz lekki taras na południe
-address=EA6503
-
-[fs20_5]
-name_de=Licht Esszimmertisch
-name_en=Dining Table Light
-name_pl=Światło stołowe
-address=41EB01
-
-[fs20_6]
-name_de=Küche A&E
-name_en=Kitchen A&E
-name_pl=Kuchnia A&E
-address=FDA600
-
-[fs20_7]
-name_de=Flur 1. OG
-name_en=Hallway 1.st Floor
-name_pl=Korytarz powyżej
-address=EA6502
-
-[fs20_8]
-name_de=Beleuchtung Treppe
-name_en=Floorlight 1st Floor
-name_pl=Oświetlenie schodów
-address=EA6509
+name_de=
+name_en=
+name_pl=
+address=
+# specify this, if Cuno is to be used for sending
 useCuno=1
 
 [ultrasonic_1]
-name_de=Wasserstand Keller
-name_en=Water Level Basement
-name_pl=Piwnica poziomu wody
+name_de=
+name_en=
+name_pl=
 min=5
 max=45
 inverse=true
 
 [temperature_1]
-name_de=Temperatur Keller
-name_en=Temperature Basement
-name_pl=Piwnica temperaturowa
-address=28-00000637328a
+name_de=
+name_en=
+name_pl=
+address=28-000006nnnnnn
 min=-5
 max=40
 
-[temperature_2]
-name_de=Temperatur Bier
-name_en=Beer Temperature
-name_pl=Temperatura Piwa
-address=28-0000072a0fac
-min=-5
-max=10
 
 [netio_1]
-name_de=Flutlicht Lu 214 Nord
-name_en=Main Building Outside Flood Light (North)
-name_pl=Główny budynek poza światłem (północ)
-address=192.168.0.182:1234:1
-id=admin:admin
+name_de=
+name_en=
+name_pl=
+address=<ip>:<port>:<plug>
+id=<user>:<password>
 
-[netio_2]
-name_de=Aussenlicht Lu 214 Ost
-name_en=Main Building Outside Light (East)
-name_pl=Główny budynek poza światłem (wschód)
-address=192.168.0.182:1234:2
-id=admin:admin
-
-[netio_3]
-name_de=Licht Türe Technikraum
-name_en=Main Building Outside Street B
-name_pl=Pokój techniczny z lekkimi drzwiami
-address=192.168.0.183:1234:2
-id=admin:admin
-
-[netio_4]
-name_de=Springbrunnen Garten
-name_en=Fountain Garden
-name_pl=Ogród Fontanny
-address=192.168.0.183:1234:4
-id=admin:admin
-
-[netio_5]
-name_de=Steckdose Strassenseite
-name_en=Plug Streetside
-name_pl=Wylot na Ulicy
-address=192.168.0.183:1234:1
-id=admin:admin
-
-[netio_6]
-name_de=Flutlicht Lu 214 Ost
-name_en=Main Building Outside Flood Light (East)
-name_pl=Reflektor Główny budynek na wschód
-address=192.168.0.182:1234:3
-id=admin:admin
-
-[netio_7]
-name_de=Flutlicht Lu 214 Süd
-name_en=Main Building Outside Flood Light (South)
-name_pl=Główny budynek reflektorów na południe
-address=192.168.0.182:1234:3
-id=admin:admin
 
 [hms100t_1]
-name_de=Kühltruhe Küche
-name_en=Freezer Kitchen
-name_pl=Kuchnia z zamrażarką
-address=E0F8
+name_de=
+name_en=
+name_pl=
+address=
 
 [hms100tf_1]
-name_de= Temperatur / Luftfeuchte Technikraum
+name_de=
 name_pl=
-name_en= Temperature / Humidity House Technic
-host=9B39
+name_en=
+host=
 
 [fs20Sensor_1]
-name_de=Bewegungsmelder Treppe unten
-name_pl=Schody detektora ruchu poniżej
-name_en=Motion Detection Stairs Ground Floor
-address=004200
-shellCmd=/root/dev/prc/shellCmds/floorLight.sh
+name_de=
+name_pl=
+name_en=
+address=
+shellCmd=
+# no fcm message notify
 disableNotify=1
-peerSensors=fs20Sensor_1
+peerSensors=<other sensor>
+shellCmd=<path to script>:<status of sensor / actor>:<status ...>
 
-[fs20Sensor_2]
-name_de=Bewegungsmelder Treppe oben
-name_pl=Schody wykrywające ruch powyżej
-name_en=Motion Detection Stairs First Floor
-address=587C00
-shellCmd=/root/dev/prc/shellCmds/floorLight.sh
-disableNotify=1
-peerSensors=fs20Sensor_1
 
-[fs20Sensor_3]
-name_de=Türklingel
-name_pl=Dzwonek
-name_en=Doorbell
-address=302000
-prio=2
-
-[fs20Sensor_4]
-name_de=Türklingel #2
-name_pl=Dzwonek #2
-name_en=Doorbell #2
-address=302001
-disableNotify=1
-
-[fs20Sensor_5]
-name_de=Schalter Haustür oben links
-name_pl=Wyłącznik Drzwi Wejściowych powyżej lewo
-name_en=Switch Entrance Door top left
-address=4A4B00
-disableNotify=1
-
-[fs20Sensor_6]
-name_de=Schalter Haustür oben rechts
-name_pl=Wyłącznik Drzwi Wejściowych powyżej prawo
-name_en=Switch Entrance Door top right
-address=4A4B01
-shellCmd=/root/dev/prc/shellCmds/floodLightNorth.sh:netio_1:peer_2
-disableNotify=1
-
-[fs20Sensor_7]
-name_de=Schalter Haustür unten links
-name_pl=Wyłącznik Drzwi Wejściowych poniżej lewo
-name_en=Switch Entrance Door bottom left
-address=4A4B02
-disableNotify=1
-
-[fs20Sensor_8]
-name_de=Schalter Haustür unten rechts
-name_pl=Wyłącznik Drzwi Wejściowych poniżej prawo
-name_en=Switch Entrance Door bottom right
-address=4A4B03
-disableNotify=1
 
 [camera_1]
-name_de=Kamera Strasseseite
-name_pl=Kamera Ulica
-name_en=Camera Street
+name_de=
+name_pl=
+name_en=
 enableTimelapse=yes
-snapshotAddress=http://192.168.0.113/onvifsnapshot/media_service/snapshot?channel=1&subtype=0
-streamAddress=rtsp://192.168.0.113:554/cam/realmonitor?channel=1&subtype=0&unicast=true&proto=ONVIF
-timelapseMP4=/root/dev/prc/www/cam113.mp4
+snapshotAddress=
+streamAddress=
+timelapseMP4=
 timelapseCodec=
 timelapseJPGs=
 # default is 6 hours
 #timelapseHours=
-codecs=
-liveStreamDuration = 300
 
-[camera_2]
-name_de=Katzen Kamera
-name_pl=Kamera Kot
-name_en=Cat Cam
-enableTimelapse=yes
-snapshotAddress=http://192.168.0.114/onvifsnapshot/media_service/snapshot?channel=1&subtype=0
-streamAddress=rtsp://192.168.0.114:554/cam/realmonitor?channel=1&subtype=0&unicast=true&proto=ONVIF
-timelapseMP4=/root/dev/prc/www/cam114.mp4
-timelapseCodec=
-timelapseJPGs=
-# default is 6 hours
-#timelapseHours=
-codecs=
-liveStreamDuration = 300
 
 [rpiCam_1]
-name_de=Kamera Waschmaschine
-name_pl=Kamera Pralka
-name_en=Washing Machine Cam
+name_de=
+name_pl=
+name_en=
 
 
 [dictionary_de]
