Further clean up ini file Refactoring - removed various getters and setters Added support for BMP180 Temp / Air Pressure Sensors Merged Sunblind / Awning control from https://github.com/liebrandapps/PyBlindsControl into PRC Removed FCM Url from js code Fixed a problem with raspberry camera (closing camera after use) Added defaulting to max resolution for ov5647 / imx219 chips

--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -1,32 +1,34 @@
 [general]
 # This is needed for push-notifications, must be unique for this server in your (lan) setup
-serverId=188
+serverId=<string to identify your server instance>
 # Configure the sensor / actor counts here. Each sensor actor must have a section in
 # this file e.g. switch_1, switch_2,...
-switchCount=9
-fs20Count=8
-peerCount=1
-ultrasonicCount=1
-temperatureCount=2
-netioCount=7
-hms100tCount=1
-hms100tfCount=1
-cameraCount=1
-rpiCam=1
+switchCount=0
+fs20Count=0
+peerCount=0
+ultrasonicCount=0
+temperatureCount=0
+netioCount=0
+hms100tCount=0
+hms100tfCount=0
+cameraCount=0
+rpiCam=0
+bmp180Count=0
+awningCount=0
 # to be removed
-fs20Data=/root/dev/prc/fs20.json
+fs20Data=<adjust this path>/fs20.json
 # Path & Name of SQLite Database, path must exist & be writeble
 database=/root/dev/prc/prc.db
 # directory to sql scripts. The file createTables.sql will be read and executed if the database
 # file does not exist.
-sqlScripts=/root/dev/prc/sql
-certFile=/root/dev/prc/ssl/server.pem
-keyFile=/root/dev/prc/ssl/server.key
-clientCertFile=/root/dev/prc/ssl/server.crt
+sqlScripts=<adjust this path>/sql
+certFile=<adjust this path>/ssl/server.crt
+keyFile=<adjust this path>/ssl/server.key
+clientCertFile=<adjust this path>/ssl/ca.crt
 # convenience for shellcmds - address is passed in params to make api calls simpler
-address=https://192.168.0.196:8020/prcapi
+address=https://<your ip goes here>:8020/prcapi
 # base path of installation:rel path to backup from other peers:file:file:...:path/:path/:...
-peerBackup=/root/dev/prc/:backup/:prc.ini:prc.db:ssl/:shellCmds/
+peerBackup=<adjust this path>/:backup/:prc.ini:prc.db:ssl/:shellCmds/
 streamWorkDir=
 openRTSPCmd=
 ffmpegCmd=
@@ -34,8 +36,8 @@ MP4BoxCmd=
 
 [webServer]
 default=index.html
-webRoot=/root/dev/prc/www
-headline=RPI Extension Board 196
+webRoot=<adjust this path>/www
+headline=<your servername here>
 
 
 
@@ -157,7 +159,16 @@ disableNotify=1
 peerSensors=<other sensor>
 shellCmd=<path to script>:<status of sensor / actor>:<status ...>
 
+[bmp180_1]
+name_de=
+name_en=
+name_pl=
 
+[awning_1]
+name_de=
+name_en=
+name_pl=
+address=
 
 [camera_1]
 name_de=
