Several fixes Added Firebase RealtimeDB as interface to Googe Assistant Functions Added support for Google Actions

--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -81,6 +81,14 @@ serviceAccountFile=
 # default https://iid.googleapis.com/iid/info/%s?details=true
 #urlGetSubscriptions=
 
+[realtimeDB]
+#enable=yes
+databaseUrl=
+serviceAccountFile=
+more=more
+less=less
+googleActionParameters=<key>:<key>...
+<key>=<value>
 
 [Cuno]
 enable=yes
@@ -109,7 +117,8 @@ name_en=
 name_pl=
 address=
 # specify this, if Cuno is to be used for sending
-useCuno=1
+#useCuno=1
+
 
 [ultrasonic_1]
 name_de=
@@ -146,7 +155,16 @@ address=
 name_de=
 name_pl=
 name_en=
-host=
+address=
+
+[ksh300_1]
+name_de=
+name_pl=
+name_en=
+address=
+googleActionVerbs=<colon(:) separated list of strings to be matched by a google action parameter>
+googleActionResponses=The outside temperature is {temperature} degree celsius, the humidity is {humidity} percent. Measured {ago}.:
+    separate responses bei a colon. Multiline values need to have a four char indentation starting with the 2nd line
 
 [fs20Sensor_1]
 name_de=
