Added Support for Google Chromecast

--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -15,6 +15,7 @@ cameraCount=0
 rpiCam=0
 bmp180Count=0
 awningCount=0
+chromeCastCount=0
 # to be removed
 fs20Data=<adjust this path>/fs20.json
 # Path & Name of SQLite Database, path must exist & be writeble
@@ -27,6 +28,8 @@ keyFile=<adjust this path>/ssl/server.key
 clientCertFile=<adjust this path>/ssl/ca.crt
 # convenience for shellcmds - address is passed in params to make api calls simpler
 address=https://<your ip goes here>:8020/prcapi
+# url used for serving content for chromecast
+addressNoSSL=http://<your ip goes here>:8019/prcweb
 # base path of installation:rel path to backup from other peers:file:file:...:path/:path/:...
 peerBackup=<adjust this path>/:backup/:prc.ini:prc.db:ssl/:shellCmds/
 streamWorkDir=
@@ -82,13 +85,23 @@ serviceAccountFile=
 #urlGetSubscriptions=
 
 [realtimeDB]
+# default is no
 #enable=yes
+#url to firebase realtime db
 databaseUrl=
+# key file from firebase console
 serviceAccountFile=
+# helper words
 more=more
 less=less
+#list of keys to be added to firebase realtime db
+# key values are copied into db on start of server
 googleActionParameters=<key>:<key>...
 <key>=<value>
+
+[chromeCast_1]
+friendlyName=<name of device - find on TV lower left corner in IDLE mode>
+callName=<name of device to be used with Google Assistant
 
 [Cuno]
 enable=yes
