Added support for Kerui

--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -220,6 +220,9 @@ name_de=
 name_pl=
 name_en=
 
+[shellCmds]
+count=1
+shellCmd_1=<id>:<path to script>:<status of sensor / actor>:<status ...>
 
 [dictionary_de]
 txt_1=Schalter
