Added zigbee support via mqtt fcm message splitting when messages become to big to be transmitted with a single send Added kerui & zigbee devices to the web UI Added a threadMonitor function to detect threads that terminated unexpectetly.

--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -16,6 +16,7 @@ rpiCam=0
 bmp180Count=0
 awningCount=0
 chromeCastCount=0
+keruiCount=0
 # to be removed
 fs20Data=<adjust this path>/fs20.json
 # Path & Name of SQLite Database, path must exist & be writeble
@@ -108,6 +109,15 @@ enable=yes
 host=<ip address>
 port=2323
 ignore=<addresses to ignore>
+
+[mqtt]
+# uncommment to enable MQTT functionality
+#enable=yes
+host=<ip address>
+# port default is 1883
+#port=1883
+# keepAlive default is 60 seconds
+#keepAlive=
 
 [switch_1]
 gpio=<gpio number>
@@ -220,6 +230,12 @@ name_de=
 name_pl=
 name_en=
 
+[zigbee_1]
+name_de=
+name_pl=
+name_en=
+topic=
+
 [shellCmds]
 count=1
 shellCmd_1=<id>:<path to script>:<status of sensor / actor>:<status ...>
@@ -241,6 +257,10 @@ txt_13=Ultraschall
 txt_14=Temperatur (DS18B20)
 txt_15=NetIO230 Schaltleiste
 txt_16=[NetIO230]
+txt_17=Temperatur
+txt_18=Temperatur
+txt_19=Temperatur
+txt_36=Zigbee Schalter
 
 [dictionary_pl]
 txt_1=Przekaźnik
@@ -259,6 +279,10 @@ txt_13=Ultradźwięk
 txt_14=Temperatura (DS18B20)
 txt_15=Listwa zasilająca
 txt_16=[NetIO230]
+txt_17=Temperatura
+txt_18=Temperatura
+txt_19=Temperatura
+txt_36=Zigbee Wyłącznik
 
 [dictionary_en]
 txt_1=Switches
@@ -277,4 +301,8 @@ txt_13=Ultrasonic
 txt_14=Temperature (DS18B20)
 txt_15=NetIO230 Power Strip
 txt_16=[NetIO230]
+txt_17=Temperature
+txt_18=Temperature
+txt_19=Temperature
+txt_36=Zigbee Actors
 
