Changed activation of Kerui support to 'enable=yes' in kerui section to be consistent with other functions Changed address of Kerui devices to support multiple ids. In case your devices is is not reliably sending the same number it may help. Also several devices can be configured as one Changes on the i2c support to better handle relais flipping

--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -16,7 +16,7 @@ rpiCam=0
 bmp180Count=0
 awningCount=0
 chromeCastCount=0
-keruiCount=0
+#keruiCount=0
 # to be removed
 fs20Data=<adjust this path>/fs20.json
 # Path & Name of SQLite Database, path must exist & be writeble
@@ -118,6 +118,17 @@ host=<ip address>
 #port=1883
 # keepAlive default is 60 seconds
 #keepAlive=
+
+[kerui]
+#enable=yes
+# filterDuplicates defaults to true
+#filterDuplicates=False
+# logUnknowDevices defaults to true
+#logUnknownDevices=False
+# usbPort is an array. All ports are tried until successfull connection
+# re-plug of arduino may result
+#usbPort=/dev/ttyUSB0:/dev/ttyUSB1
+
 
 [switch_1]
 gpio=<gpio number>
@@ -229,6 +240,16 @@ timelapseJPGs=
 name_de=
 name_pl=
 name_en=
+
+[kerui_1]
+name_de=
+name_pl=
+name_en=
+# Address for kerui is an array to compensate varying IDs due to the unreliable transmission
+address=<address 1>:<address 2>:...
+disableNotify=1
+shellCmd=/root/dev/prc/shellCmds/teraceLight.sh:fs20_2
+
 
 [zigbee_1]
 name_de=
