--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -128,6 +128,8 @@ host=<ip address>
 # usbPort is an array. All ports are tried until successfull connection
 # re-plug of arduino may result
 #usbPort=/dev/ttyUSB0:/dev/ttyUSB1
+# with forward you can have multiple receivers around your place. Forward address = is processed at that server
+#forward=<https://other prc server
 
 
 [switch_1]
