MQTT Support I: 18DSB20, HMS100T, HMS100TF, KSH300, BMP180, Ultrasonic values can be published via MQTT MQTT Support II: Relay Board, FS20, NETIO Switches can be controlled via MQTT messages MQTT Support III: Kerui Devices publish via MQTT when triggered (motion detection, window contact) to enable set publish=yes in section mqtt of ini file.

--- a/prc<TEMPLATE>.ini
+++ b/prc<TEMPLATE>.ini
@@ -118,6 +118,8 @@ host=<ip address>
 #port=1883
 # keepAlive default is 60 seconds
 #keepAlive=
+#public events default is no
+#publish=yes
 
 [kerui]
 #enable=yes
@@ -171,6 +173,10 @@ name_pl=
 address=28-000006nnnnnn
 min=-5
 max=40
+# Topic for publishing with MQTT
+mqttTopic=
+# payload to publish
+mqttPayload={ "temperature" : %.2f }
 
 
 [netio_1]
@@ -192,6 +198,11 @@ name_de=
 name_pl=
 name_en=
 address=
+# Topic for publishing with MQTT
+mqttTopic=
+# payload to publish
+mqttPayload={ "temperature" : %.2f, "humidity" : %.2f }
+
 
 [ksh300_1]
 name_de=
@@ -201,6 +212,11 @@ address=
 googleActionVerbs=<colon(:) separated list of strings to be matched by a google action parameter>
 googleActionResponses=The outside temperature is {temperature} degree celsius, the humidity is {humidity} percent. Measured {ago}.:
     separate responses bei a colon. Multiline values need to have a four char indentation starting with the 2nd line
+# Topic for publishing with MQTT
+mqttTopic=
+# payload to publish
+mqttPayload={ "temperature" : %.2f, "humidity" : %.2f }
+
 
 [fs20Sensor_1]
 name_de=
